# DAO

./: .gitignore  .pre-commit-config.yaml  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  cabal.project  dao.cabal  debug.hs  default.nix  flake.nix  result  tally-nft-policy-id.txt  tally-nft.plutus  triphut-dao-scripts.json  triphut.cabal
.github/: Bug_report.md  Custom.md  Feature_request.md
app/: Main.hs
dao/: build.nix  cabal.project  dao.cabal
dao-lib/: build.nix  dao.cabal  result
dao-specs/Spec/: Addresses.hs  ConfigurationNft.hs  Index.hs  SampleData.hs  SpecUtils.hs  Tally.hs  Treasury.hs  Upgrade.hs  Values.hs  Vote.hs  VoteValidator.hs
dao-test/: Spec.hs
dao/Dao/: AlwaysSucceed.hs  ConfigurationNft.hs  Index.hs  Shared.hs  Tally.hs  Treasury.hs  Types.hs  Vote.hs
dao/Dao/ConfigurationNft/: Script.hs
dao/Dao/Index/: Script.hs
dao/Dao/Tally/: Script.hs
dao/Dao/Treasury/: Script.hs
dao/Dao/Vote/: Script.hs
dao/app/: Main.hs
dao/app/Scripts/: Compile.hs
dao/dao-lib/Dao/: AlwaysSucceed.hs  Index.hs  ScriptArgument.hs  Shared.hs
dao/dao-lib/Dao/Configuration/: Script.hs
dao/dao-lib/Dao/ConfigurationNft/: Script.hs
dao/dao-lib/Dao/Index/: Script.hs
dao/dao-lib/Dao/Tally/: Script.hs
dao/dao-lib/Dao/Treasury/: Script.hs
dao/dao-lib/Dao/Vote/: Script.hs
dao/dao-specs/Spec/: Addresses.hs  Configuration.hs  ConfigurationNft.hs  Index.hs  SampleData.hs  SpecUtils.hs  Tally.hs  Values.hs  Vote.hs
dao/dao-specs/Spec/AlwaysSucceed/: Script.hs
dao/dao-specs/Spec/Configuration/: Context.hs  SampleData.hs  Script.hs  Transactions.hs  Utils.hs
dao/dao-specs/Spec/ConfigurationNft/: Context.hs  SampleData.hs  Script.hs  Utils.hs
dao/dao-specs/Spec/Index/: Context.hs  SampleData.hs  Script.hs  Transactions.hs  Utils.hs
dao/dao-specs/Spec/Tally/: Context.hs  SampleData.hs  Script.hs  Transactions.hs  Utils.hs
dao/dao-specs/Spec/Treasury/: Context.hs  Script.hs
dao/dao-specs/Spec/Upgrade/: Context.hs
dao/dao-specs/Spec/Utils/: Unit.hs
dao/dao-specs/Spec/Vote/: Context.hs  ContextValidator.hs  SampleData.hs  Script.hs  Transactions.hs  Utils.hs
dao/dao-test/: Spec.hs
dao/dao/Dao/: ConfigurationNft.hs  Tally.hs  Vote.hs
dao/dao/Dao/Vote/: Script.hs
docs/: overview.md
nix/: pkgs.nix  settings.nix
patches/: 0001-removed-duplicate-package.patch
scripts/: always-succeed-1-hash.txt  always-succeed-1.plutus  always-succeed-hash.txt  compile.sh  configuration-hash.txt  configuration-nft-policy-id.txt  configuration-nft.plutus  configuration.plutus  generate-datums.sh  generate-tally-datums.sh  generate-vote-datums.sh  hash-plutus.sh  index-validator-hash.txt  index-validator.plutus  tally-index-policy-id.txt  tally-index.plutus  tally-nft-policy-id.txt  tally-nft.plutus  tally-validator-hash.txt  tally-validator.plutus  treasury-validator-hash.txt  treasury-validator.plutus  vote-minter-policy-id.txt  vote-minter.plutus  vote-validator-hash.txt  vote-validator.plutus
scripts/core/: cancel-vote.sh  count-vote.sh  disburse-travel-treasury.sh  disburse-treasury.sh  dummy-tally-lock.sh  lock-proposal.sh  lock-treasury.sh  lock-upgrade-proposal.sh  mint-configuration-nft-tx.sh  mint-tally-index-nft.sh  mint-tally-nft.sh  mint-vote.sh  update-tally-one.sh  update-tally.sh  upgrade-configuration.sh
scripts/failure-cases/: bad-dummy-tally-long-lived-lock.sh  cancel-vote-dont-burn.sh  cancel-vote-missing-config-nft.sh  cancel-vote-wrong-signer.sh  count-vote-bad-tally-utxo.sh  dummy-tally-lock-no-relative-majority.sh  dummy-tally-lock-too-few-votes.sh  general-disbursement-too-little-back.sh  general-disbursement-too-little-to-proposer.sh  mint-invalid-configuration-nft-tx.sh  mint-vote-bad-output-address.sh  mint-vote-counted.sh  mint-vote-too-little-ada.sh  trip-disbursement-too-little-back.sh  trip-disbursement-too-little-to-agent.sh  trip-disbursement-too-little-to-traveler.sh  upgrade-configuration-missing-proposal.sh  upgrade-configuration-missing-tally.sh  upgrade-configuration-no-relative-majority.sh  upgrade-configuration-too-few-votes.sh  upgrade-configuration-wrong-upgrade-token.sh
scripts/happy-path/: cancel-vote.sh  count-vote.sh  dummy-tally-lock.sh  dummy-tally-long-lived-lock.sh  general-disbursement.sh  lock-long-lived-upgrade-proposal.sh  lock-treasury.sh  lock-upgrade-proposal.sh  mint-configuration-nft-tx.sh  mint-general-tally-nft.sh  mint-tally-index-nft.sh  mint-tally-nft.sh  mint-trip-tally-nft.sh  mint-vote-long-lived.sh  mint-vote0-fungible.sh  mint-vote0-long-lived.sh  mint-vote1-fungible.sh  mint-vote1-long-lived.sh  tally-general-initial-two-votes.sh  tally-initial-one-vote.sh  tally-initial-two-votes-fungible.sh  tally-initial-two-votes.sh  tally-trip-initial-two-votes.sh  trip-disbursement.sh  upgrade-configuration.sh
scripts/local-testnet/: configuration.addr  index-validator.addr  protocol-parameters.json  tally-validator.addr  treasury-validator.addr  vote-validator.addr
scripts/mainnet/: always-succeed-1.addr  always-succeed.addr  configuration.addr  index-validator.addr  protocol-parameters.json  tally-index.addr  tally-validator.addr  treasury-validator.addr  vote-validator.addr
scripts/minting/: mint-0-policy.sh  mint-vote-0-fungible.sh  mint-vote-0-nft.sh  mint-vote-1-nft.sh  test-mint-tx.sh
scripts/query/: always-succeed-1.sh  configuration-nft-deployer.sh  configuration-validator.sh  index-nft-deployer.sh  index-validator.sh  proposal-dummy-1.sh  proposal-dummy.sh  tally-validator.sh  treasury-validator.sh  vote-validator.sh  voter-0.sh
scripts/scratch/: setup-wallets.sh
scripts/testnet/: always-succeed-1.addr  configuration.addr  index-validator.addr  protocol-parameters.json  tally-index.addr  tally-validator.addr  treasury-validator.addr  vote-validator.addr
scripts/tests/: all.sh  upgrade-no-relative-majority.sh  upgrade-too-few-votes.sh  upgrade.sh  vote-mint-and-cancel.sh  vote-mint-and-count-fungible.sh  vote-mint-and-count-general.sh  vote-mint-and-count-trip.sh  vote-mint-and-count-upgrade.sh  vote-mint-and-count.sh  (+2 more)
triphut-test/: Spec.hs
types/: build.nix
(+109 files in other folders)
