cabal-version: 2.4
name:          triphut
version:       1.0.0.0
license: MIT
author:        Jonathan Fischoff
maintainer:    jonathan@Canonicalllc.com
build-type:    Simple
copyright: 2021 Canonical LLC

common common-lang
  default-language: Haskell2010

common common-extensions
  default-extensions:
    DataKinds
    MultiParamTypeClasses
    OverloadedStrings
    ScopedTypeVariables
    RecordWildCards
    TemplateHaskell
    TypeApplications
    TypeFamilies
    NamedFieldPuns
    NumericUnderscores
    LambdaCase
    BangPatterns
    NoImplicitPrelude
    CPP
    DeriveGeneric
    DerivingStrategies
    ImportQualifiedPost

common common-options
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wunused-packages -Wmissing-deriving-strategies

common common-deps
  build-depends:
    , base ^>=4.14
    , cardano-api
    , plutus-ledger-api

library
  import: common-lang, common-deps, common-options, common-extensions
  exposed-modules:
    Canonical.AlwaysSucceed
    Canonical.ConfigurationNft
    Canonical.Vote
    Canonical.Treasury
    Canonical.Types
    Canonical.Shared
    Canonical.Tally

  build-depends:
    , aeson
    , bytestring
    , containers
    , plutus-tx
    , plutus-tx-plugin
    , serialise
    , plutonomy

  hs-source-dirs:  src
  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -Wno-unused-packages

executable create-sc
  import: common-lang, common-deps, common-options, common-extensions
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , triphut
    , optparse-generic
