cabal-version: 2.4
name:          triphut
version:       1.0.0.0
license: MIT
author:        Jonathan Fischoff
maintainer:    jonathan@Canonicalllc.com
build-type:    Simple
copyright: 2021 Canonical LLC

common common-lang
  default-language: Haskell2010

common common-extensions
  default-extensions:
    DataKinds
    MultiParamTypeClasses
    OverloadedStrings
    ScopedTypeVariables
    RecordWildCards
    TemplateHaskell
    TypeApplications
    TypeFamilies
    NamedFieldPuns
    NumericUnderscores
    LambdaCase
    BangPatterns
    NoImplicitPrelude
    CPP
    DeriveGeneric
    DerivingStrategies
    ImportQualifiedPost

common common-options
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates -fexpose-all-unfoldings
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wunused-packages -Wmissing-deriving-strategies

common common-depends
  build-depends:
    , base ^>=4.14
    , cardano-api
    , plutus-ledger-api

common common-test-depends
  build-depends:
   , plutus-simple-model
   , tasty
   , tasty-hunit
   , plutus-tx

library
  import: common-lang, common-depends, common-options, common-extensions
  exposed-modules:
    Triphut.AlwaysSucceed
    Triphut.ConfigurationNft
    Triphut.ConfigurationNft.Script
    Triphut.Index
    Triphut.Index.Script
    Triphut.Shared
    Triphut.Tally
    Triphut.Tally.Script
    Triphut.Treasury
    Triphut.Treasury.Script
    Triphut.Types
    Triphut.Vote
    Triphut.Vote.Script

  build-depends:
    , aeson
    , bytestring
    , containers
    , plutus-tx
    , plutus-tx-plugin
    , serialise
    , plutonomy

  hs-source-dirs:  triphut
  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -Wno-unused-packages

library triphut-specs
  import: common-lang, common-depends, common-options, common-extensions, common-test-depends
  hs-source-dirs: triphut-specs
  exposed-modules:
    Spec.AlwaysSucceed.Script
    Spec.ConfigurationNft
    Spec.ConfigurationNft.Context
    Spec.ConfigurationNft.SampleData
    Spec.ConfigurationNft.Script
    Spec.Index
    Spec.Index.Context
    Spec.Index.SampleData
    Spec.Index.Script
    Spec.SpecUtils
    Spec.Tally.Script
    Spec.Utils
    Spec.Utils.Unit
    Spec.Vote.Script
  build-depends:
    , triphut
    , plutus-tx-plugin

executable create-sc
  import: common-lang, common-depends, common-options, common-extensions
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , triphut
    , optparse-generic

test-suite triphut-test
  import: common-lang, common-depends, common-options, common-extensions, common-test-depends
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: triphut-test
  build-depends:
    , triphut-specs
