cabal-version: 2.4
name:          dao
version:       1.0.0.0
license:       MIT
author:        Jonathan Fischoff
maintainer:    jonathan@Canonicalllc.com
build-type:    Simple
copyright:     2021 Canonical LLC

common common-lang
  default-language: Haskell2010

common common-extensions
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    CPP
    DataKinds
    DeriveGeneric
    DerivingStrategies
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    TypeFamilies

common common-options
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates -fexpose-all-unfoldings
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wunused-packages -Wmissing-deriving-strategies

common common-depends
  build-depends: base

library
  import:
    common-lang, common-depends, common-options, common-extensions

  exposed-modules:
    Dao.Configuration.Script
    Dao.Index.Script
    Dao.ScriptArgument
    Dao.Shared
    Dao.Tally.Script
    Dao.Treasury.Script
    Dao.Vote.Script

  build-depends:
    , aeson
    , bytestring
    , containers
    , dao-lb-types
    , lbr-plutus
    , lbr-prelude
    , plutonomy
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , serialise

  hs-source-dirs:  dao-lib
  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -Wno-unused-packages

library dao-specs
  import:
    common-lang, common-depends, common-options, common-extensions

  hs-source-dirs:  dao-specs
  build-depends:
    , dao-lb-types
    , plutus-ledger-api
    , plutus-simple-model
    , plutus-tx
    , tasty
    , tasty-hunit

  exposed-modules:
    Spec.Addresses
    Spec.AlwaysSucceed.Script
    Spec.Configuration
    Spec.Configuration.Context
    Spec.Configuration.SampleData
    Spec.Configuration.Script
    Spec.Configuration.Transactions
    Spec.Configuration.Utils
    Spec.Index
    Spec.Index.Context
    Spec.Index.SampleData
    Spec.Index.Script
    Spec.Index.Transactions
    Spec.Index.Utils
    Spec.SampleData
    Spec.SpecUtils
    Spec.Tally
    Spec.Tally.Context
    Spec.Tally.SampleData
    Spec.Tally.Script
    Spec.Tally.Transactions
    Spec.Tally.Utils
    Spec.Treasury
    Spec.Treasury.Context
    Spec.Treasury.Script
    Spec.Treasury.Transactions
    Spec.Treasury.Utils
    Spec.Upgrade
    Spec.Upgrade.Context
    Spec.Utils
    Spec.Utils.Unit
    Spec.Values
    Spec.Vote
    Spec.Vote.Context
    Spec.Vote.ContextValidator
    Spec.Vote.SampleData
    Spec.Vote.Script
    Spec.Vote.Transactions
    Spec.Vote.Utils
    Spec.VoteValidator

  build-depends:
    , dao
    , plutus-tx-plugin

executable create-sc
  import:
    common-lang, common-depends, common-options, common-extensions

  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , dao
    , plutus-ledger-api

test-suite dao-test
  import:
    common-lang, common-depends, common-options, common-extensions

  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: dao-test
  build-depends:
    , dao-specs
    , tasty
